--- a/DrivingApp/bin/AndroidManifest.xml
+++ b/DrivingApp/bin/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:name="com.example.drivingapp.SensorActivity"
             android:label="@string/title_activity_sensor" >
         </activity>
+        <service android:name="com.example.drivingapp.readAccelerometer" />
     </application>
 
 </manifest>
