--- a/DrivingApp/AndroidManifest.xml
+++ b/DrivingApp/AndroidManifest.xml
@@ -18,13 +18,18 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+     
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.example.drivingapp.SensorActivity"
             android:label="@string/title_activity_sensor" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            	<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.HOME" />
+			</intent-filter>
         </activity>
         <service android:name="com.example.drivingapp.readAccelerometer" />
     </application>
