--- a/DrivingApp/bin/AndroidManifest.xml
+++ b/DrivingApp/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.GET_TASKS" />
-     
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
@@ -20,7 +20,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-     
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,11 +29,18 @@
             android:label="@string/title_activity_sensor" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-            	<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.HOME" />
-			</intent-filter>
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.HOME" />
+            </intent-filter>
         </activity>
+
         <service android:name="com.example.drivingapp.readAccelerometer" />
+        
+        <activity
+            android:name="com.example.drivingapp.SpeedAdjustActivity"
+            android:label="@string/title_activity_speed_adjust" >
+        </activity>
     </application>
 
 </manifest>
