--- a/DrivingApp/bin/AndroidManifest.xml
+++ b/DrivingApp/bin/AndroidManifest.xml
@@ -5,16 +5,22 @@
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hasCode="true" >
         <activity
             android:name="com.example.drivingapp.MainActivity"
             android:label="@string/app_name" >
@@ -34,13 +40,56 @@
                 <category android:name="android.intent.category.HOME" />
             </intent-filter>
         </activity>
-
+        
+        
         <service android:name="com.example.drivingapp.readAccelerometer" />
         
         <activity
             android:name="com.example.drivingapp.SpeedAdjustActivity"
             android:label="@string/title_activity_speed_adjust" >
         </activity>
+        
+        <activity android:label="@string/app_name"
+          android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+          android:screenOrientation="portrait"
+            android:name=".LockScreenAppActivity"
+           >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name=".StartLockScreen"
+            android:theme="@style/Theme.Transparent" >
+            <!--
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+
+            </intent-filter>
+        --></activity>
+
+        
+        <service android:name=".MyService" >
+        </service>
+        
+        <receiver
+            android:enabled="true"
+            android:name="receiver.LockScreenReceiver" >
+            <intent-filter >
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
