--- a/DrivingApp/AndroidManifest.xml
+++ b/DrivingApp/AndroidManifest.xml
@@ -8,19 +8,19 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
+        android:hasCode="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:hasCode="true" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.drivingapp.MainActivity"
             android:label="@string/app_name" >
@@ -40,30 +40,28 @@
                 <category android:name="android.intent.category.HOME" />
             </intent-filter>
         </activity>
-        
-        
+
         <service android:name="com.example.drivingapp.readAccelerometer" />
-        
+
         <activity
             android:name="com.example.drivingapp.SpeedAdjustActivity"
             android:label="@string/title_activity_speed_adjust" >
         </activity>
-        
-        <activity android:label="@string/app_name"
-          android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-          android:screenOrientation="portrait"
-            android:name=".LockScreenAppActivity"
-           >
-            <intent-filter >
+        <activity
+            android:name="com.example.drivingapp.LockScreenAppActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
-            android:name=".StartLockScreen"
+            android:name="com.example.drivingapp.StartLockScreen"
             android:theme="@style/Theme.Transparent" >
+
             <!--
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
@@ -75,21 +73,41 @@
                 <category android:name="android.intent.category.DEFAULT" />
 
 
-            </intent-filter>
-        --></activity>
+            </intent-filter>
+            -->
+        </activity>
 
-        
-        <service android:name=".MyService" >
+        <service android:name="com.example.drivingapp.MyService" >
         </service>
-        
-        <receiver
-            android:enabled="true"
-            android:name="receiver.LockScreenReceiver" >
-            <intent-filter >
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
 
+        <receiver
+            android:name="receiver.LockScreenReceiver"
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name="com.example.drivingapp.OptionsActivity"
+            android:label="@string/title_activity_options" >
+        </activity>
+        <activity
+            android:name="com.example.drivingapp.AboutActivity"
+            android:label="@string/title_activity_about" >
+        </activity>
+        <activity
+            android:name="com.example.drivingapp.HelpActivity"
+            android:label="@string/title_activity_help" >
+        </activity>
+        <activity
+            android:name="com.example.drivingapp.SetAppsActivity"
+            android:label="@string/title_activity_set_apps" >
+        </activity>
+        <activity
+            android:name="com.example.drivingapp.StatsActivity"
+            android:label="@string/title_activity_stats" >
+        </activity>
     </application>
 
 </manifest>
