graphing functional. able to pull data from sqlite. next step is to display the actual data points instead of fake data

--- a/DrivingApp/AndroidManifest.xml
+++ b/DrivingApp/AndroidManifest.xml
@@ -128,6 +128,9 @@
     		android:theme="@android:style/Theme.Black.NoTitleBar" >
 		</activity>
         
+		<activity android:name="com.example.drivingapp.XYChartBuilder" />
+		<!--<activity android:name="org.achartengine.GraphicalActivity" />-->
+		
     </application>
 
 </manifest>
