--- a/DrivingApp/bin/AndroidManifest.xml
+++ b/DrivingApp/bin/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:allowBackup="true"
         android:hasCode="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/caricon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
